[metadata]
name = pumphouse
version = 0.1
summary = Migrating workloads from arbitrary OpenStack cloud to Miratnis OpenStack cloud.
description-file =
    README.md
author = Mirantis Labs
author-email = pumphouse-all@mirantis.com
home-page = http://mirantis.com/
include_package_data = true
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    pumphouse

[entry_points]
console_scripts =
    pumphouse = pumphouse.cmds.pump:main
    pumphouse-api = pumphouse.cmds.api:main
    pumphouse-bm = pumphouse.cmds.baremetal:main
